--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Договор публичной оферты SUN HOUSE</title>
+  <title>Договор публичной оферты HOME</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     * { box-sizing: border-box; }
@@ -258,7 +258,7 @@
     <div class="card">
       <header>
         <h1>ДОГОВОР ПУБЛИЧНОЙ ОФЕРТЫ</h1>
-        <p>на оказание информационно-риелторских услуг по аренде недвижимости «SUN HOUSE»</p>
+        <p>на оказание информационно-риелторских услуг по аренде недвижимости «HOME»</p>
       </header>
 
       <div class="meta">
