--- a/index.html
+++ b/index.html
@@ -44,25 +44,6 @@
       color: #6b7280;
     }
 
-    .meta {
-      margin-top: 20px;
-      font-size: 13px;
-      color: #4b5563;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 16px;
-    }
-
-    .meta span { padding: 2px 0; }
-
-    .meta-label {
-      font-weight: 600;
-      text-transform: uppercase;
-      font-size: 11px;
-      color: #9ca3af;
-      margin-right: 6px;
-    }
-
     .contract-block {
       margin-top: 24px;
       border-radius: 12px;
@@ -204,7 +185,7 @@
       background: linear-gradient(135deg, #1d4ed8, #2563eb);
       color: #ffffff;
       box-shadow: 0 12px 22px rgba(37, 99, 235, 0.4);
-      transition: transform 0.12s ease, box-shadow 0.12s ease, filter 0.12s ease;
+      transition: transform 0.15s ease, box-shadow 0.15s ease, filter 0.15s ease;
       white-space: nowrap;
     }
 
@@ -261,20 +242,14 @@
         <p>на оказание информационно-риелторских услуг по аренде недвижимости «HOME»</p>
       </header>
 
-      <div class="meta">
-        <span><span class="meta-label">Город:</span> Бишкек</span>
-        <span><span class="meta-label">Год:</span> 2025</span>
-        <span><span class="meta-label">Исполнитель:</span> ИП Касмамбетова Айжамал Керимбековна</span>
-      </div>
-
       <section class="contract-block" aria-label="Текст договора">
         <h2>Текст договора</h2>
 
         <p>
           Настоящий Договор публичной оферты на оказание риелторских услуг по аренде недвижимости (далее – «Договор»)
-          является официальным публичным предложением ИП Касмамбетовой Айжамал Керимбековны,
-          действующей на основании свидетельства о регистрации (далее – «Исполнитель»),
-          на заключение сделки для оказания информационно-риелторских услуг по аренде недвижимости.
+          является официальным публичным предложением Исполнителя, действующего на основании свидетельства
+          о регистрации (далее – «Исполнитель»), на заключение сделки для оказания информационно-риелторских услуг
+          по аренде недвижимости.
         </p>
         <p>
           Договор считается заключенным и вступает в силу с момента оплаты услуг Исполнителя Заказчиком.
