--- a/index.html
+++ b/index.html
@@ -76,16 +76,6 @@
       margin: 4px 0;
     }
 
-    .contract-note {
-      margin-top: 16px;
-      padding: 10px 12px;
-      border-radius: 10px;
-      background: #eff6ff;
-      border: 1px dashed #bfdbfe;
-      font-size: 12px;
-      color: #1d4ed8;
-    }
-
     .signature {
       margin-top: 24px;
       padding-top: 20px;
@@ -246,115 +236,99 @@
         <h2>Текст договора</h2>
 
         <p>
-          Настоящий Договор публичной оферты на оказание риелторских услуг по аренде недвижимости (далее – «Договор»)
-          является официальным публичным предложением Исполнителя, действующего на основании свидетельства
-          о регистрации (далее – «Исполнитель»), на заключение сделки для оказания информационно-риелторских услуг
-          по аренде недвижимости.
+          Настоящий Договор публичной оферты на оказание информационно-риелторских услуг по аренде недвижимости (далее – «Договор»)
+          является официальным публичным предложением Исполнителя, действующего на основании свидетельства о регистрации
+          (далее – «Исполнитель»), на заключение сделки для оказания информационно-риелторских услуг по аренде недвижимости.
         </p>
         <p>
-          Договор считается заключенным и вступает в силу с момента оплаты услуг Исполнителя Заказчиком.
+          Договор считается заключённым и вступает в силу с момента оплаты услуг Исполнителя Заказчиком.
           Оплата подтверждает полное и безоговорочное принятие всех условий настоящего Договора.
         </p>
 
         <p class="contract-section-title">1. Предмет договора</p>
         <p>
-          1.1. Исполнитель обязуется заняться поиском квартир по городу Бишкек через свои источники и включить Заказчика
-          в специальную группу Telegram – приложение с базой данных с жилой недвижимостью (далее по тексту – «Объекты»)
-          после получения оплаты и ежедневно отправлять варианты Объектов.
+          1.1. Исполнитель обязуется осуществлять поиск квартир по городу Бишкек через свои источники и включить Заказчика
+          в специальную группу в Telegram-приложении с базой данных жилой недвижимости (далее – «Объекты»)
+          после получения оплаты, а также направлять варианты Объектов в указанную группу.
         </p>
         <p>
-          1.2. При получении информации от Исполнителя Заказчик самостоятельно осматривает Объект и договаривается
-          с арендодателем.
-        </p>
-        <p>
-          1.3. Информация об Объектах получается Исполнителем как из закрытых источников, так и из открытых источников
-          (например, Лалафо и прочих аналогичных площадок). Исполнитель осуществляет поиск и передачу объявлений,
-          но не участвует в заключении договоров аренды.
+          1.2. Получая информацию от Исполнителя, Заказчик самостоятельно осматривает Объект и договаривается
+          с арендодателем (собственником или его представителем) напрямую.
         </p>
 
         <p class="contract-section-title">2. Условия оплаты</p>
         <p>
-          2.1. Оплата производится в сомах КР, на указанные реквизиты Исполнителя, в момент подписания настоящего Договора.
+          2.1. Оплата производится в сомах КР на указанные реквизиты Исполнителя в момент акцепта настоящего Договора.
         </p>
         <p>
-          2.2. Оплата составляет 1000 (одна тысяча) сом за 1 (один) месяц нахождения в группе Telegram – приложения
-          независимо от того, заселился Заказчик или нет.
+          2.2. Стоимость услуг составляет 1000 (одна тысяча) сом, единовременно, за предоставление бессрочного доступа
+          к группе в Telegram-приложении «HOME» без ограничения по сроку действия подписки
+          (до прекращения работы сервиса/группы или удаления Заказчика за нарушение условий Договора).
         </p>
         <p>
           2.3. Услуга считается оказанной с момента предоставления доступа к группе в Telegram-приложении.
         </p>
         <p>
-          2.4. Оплаченная сумма не подлежит возврату, в том числе в случае, если Заказчик не воспользовался предложениями.
+          2.4. Оплаченная сумма не подлежит возврату, в том числе в случае, если Заказчик не воспользовался предложениями,
+          не заселился или прекратил пользоваться группой по собственной инициативе.
         </p>
 
         <p class="contract-section-title">3. Права и обязанности сторон</p>
         <p>
-          3.1. Исполнитель обязан проводить поиск Объектов по всему городу Бишкек через свои источники и отправлять
-          все найденные варианты в группу Telegram-приложения.
+          3.1. Исполнитель обязуется проводить поиск Объектов по городу Бишкек через свои источники и направлять
+          найденные варианты в группу в Telegram-приложении.
         </p>
         <p>
-          3.2. Исполнитель обязан проводить консультацию Заказчику при возникновении вопросов относительно Объектов
-          до заселения.
+          3.2. Исполнитель вправе консультировать Заказчика по общим вопросам, связанным с Объектами, до заселения
+          (в пределах своей компетенции и без участия в переговорах и заключении договора аренды).
         </p>
         <p>
-          3.3. Заказчик обязан оплачивать услуги Исполнителя в соответствии с условиями настоящего Договора.
+          3.3. Заказчик обязуется оплатить услуги Исполнителя в соответствии с условиями настоящего Договора
+          и предоставить достоверные контактные данные.
         </p>
         <p>
-          3.4. После заселения Заказчик обязан уведомить Исполнителя о прекращении поиска путем удаления из группы
-          Telegram-приложения.
+          3.4. Заказчик обязуется не передавать третьим лицам доступ к группе и/или полученную от Исполнителя информацию
+          об Объектах, не копировать и не распространять её каким-либо способом без согласия Исполнителя.
         </p>
         <p>
-          3.5. Заказчик обязуется не передавать полученную от Исполнителя информацию об Объектах третьим лицам.
-        </p>
-        <p>
-          3.6. В случае распространения третьим лицам полученной информации в группе Telegram-приложения
-          об Объектах налагается штраф за неисполнение условий настоящего Договора в размере
+          3.5. В случае распространения третьим лицам информации об Объектах, полученной через группу Telegram-приложения,
+          на Заказчика налагается штраф за неисполнение условий настоящего Договора в размере
           10 000 (десять тысяч) сом.
         </p>
 
         <p class="contract-section-title">4. Ограничение ответственности</p>
         <p>
-          4.1. Информация о недвижимости поступает от третьих лиц (собственников) и может быть получена как из закрытых,
-          так и из открытых источников (например, Лалафо). Исполнитель не несёт ответственности за её достоверность,
-          актуальность, полноту, а также за возможные изменения условий аренды.
+          4.1. Информация о недвижимости и объявления об Объектах предоставляются третьими лицами
+          (собственниками, их представителями и иными лицами) и могут быть получены как из закрытых, так и из открытых источников
+          (например, Лалафо и других аналогичных площадок).
         </p>
         <p>
-          4.2. Исполнитель не гарантирует заключение сделки или её успешность.
+          4.2. Исполнитель не несёт ответственности за содержание, достоверность, актуальность, полноту, законность
+          и иные характеристики объявлений арендодателей, а также за соответствие Объекта фактическим условиям.
         </p>
         <p>
-          4.3. Исполнитель не является стороной сделки между Заказчиком и арендодателем.
+          4.3. Все детали и условия аренды (стоимость, сроки, залог, порядок оплаты, наличие документов, состояние Объекта и т.п.)
+          Заказчик обязан самостоятельно уточнять напрямую у арендодателя до заключения договора аренды.
         </p>
         <p>
-          4.4. Заказчик принимает на себя всю ответственность за перепроверку информации и принятие решений.
+          4.4. Исполнитель не гарантирует заключение сделки аренды, её успешность, а также не является стороной сделки
+          между Заказчиком и арендодателем.
         </p>
         <p>
-          4.5. Исполнитель не несёт ответственности за действия или бездействие арендодателей,
-          за изменение условий аренды, отказ в аренде или недобросовестное поведение третьих лиц.
+          4.5. Исполнитель не несёт ответственности за действия или бездействие арендодателей, изменение условий аренды,
+          отказ в аренде, недобросовестное поведение третьих лиц и иные последствия взаимоотношений между Заказчиком
+          и третьими лицами.
         </p>
 
         <p class="contract-section-title">5. Прочие положения</p>
         <p>
-          5.1. Если у Заказчика изменились обстоятельства и он приостанавливает свой поиск (путем выхода из группы
-          Telegram-приложения), при этом еще не заселившись, он имеет право повторно обратиться в агентство,
-          оплатив 1000 сом для повторного добавления в группу.
+          5.1. Договор вступает в силу с момента оплаты услуг Исполнителя Заказчиком и действует на весь период предоставления
+          Заказчику доступа к группе в Telegram-приложении «HOME».
         </p>
         <p>
-          5.2. В ходе выполнения Договора Заказчик имеет право изменить исходные требования к Объекту
-          в устной или письменной форме.
+          5.2. Любые дополнительные договорённости между Заказчиком и арендодателем заключаются без участия Исполнителя
+          и не создают для Исполнителя каких-либо обязанностей или ответственности.
         </p>
-        <p>
-          5.3. Споры и разногласия по настоящему Договору разрешаются путем переговоров. В случае недостижения
-          согласия на переговорах споры рассматриваются в соответствии с законодательством Кыргызской Республики,
-          в суде по месту регистрации Исполнителя.
-        </p>
-        <p>
-          5.4. Договор вступает в силу с момента оплаты услуг Исполнителя Заказчиком.
-        </p>
-
-        <div class="contract-note">
-          Данный текст представляет собой публичную оферту. Факт оплаты и заполнения формы на сайте означает акцепт
-          условий Договора Заказчиком.
-        </div>
       </section>
 
       <section class="signature" aria-label="Форма подписания договора">
@@ -367,7 +341,14 @@
           <form id="agreement-form" novalidate>
             <div class="field">
               <label for="fullName">ФИО заказчика</label>
-              <input id="fullName" name="fullName" type="text" autocomplete="name" placeholder="Иванов Иван Иванович" required>
+              <input
+                id="fullName"
+                name="fullName"
+                type="text"
+                autocomplete="name"
+                placeholder="Асанов Асан Асанович"
+                required
+              >
             </div>
 
             <div class="field">
@@ -388,7 +369,7 @@
               <button type="submit" class="btn-primary">
                 Подписать договор
               </button>
-              <span class="hint">Нажимая кнопку, вы подтверждаете акцепт публичной оферты.</span>
+              <span class="hint">Нажимая кнопку, вы подтверждаете акцепт условий Договора.</span>
             </div>
 
             <div id="status" class="status" aria-live="polite"></div>
@@ -419,6 +400,8 @@
 
   <script>
     (function () {
+      const API_URL = "https://homekg.deno.dev/sign-contract";
+
       var form = document.getElementById("agreement-form");
       var status = document.getElementById("status");
       var summaryBlock = document.getElementById("signature-summary");
@@ -437,7 +420,7 @@
         });
       }
 
-      form.addEventListener("submit", function (e) {
+      form.addEventListener("submit", async function (e) {
         e.preventDefault();
         status.textContent = "";
         status.className = "status";
@@ -452,18 +435,54 @@
           return;
         }
 
-        // Здесь можно добавить отправку данных на сервер (fetch/AJAX), если он будет.
-        // Сейчас просто отображаем локальное подтверждение.
+        var acceptedAt = nowFormatted();
 
         summaryName.textContent = fullName;
         summaryPhone.textContent = phone;
-        summaryDatetime.textContent = nowFormatted();
+        summaryDatetime.textContent = acceptedAt;
         summaryBlock.hidden = false;
 
-        status.textContent = "Договор принят. Данные успешно зафиксированы в интерфейсе.";
-        status.classList.add("success");
+        try {
+          var res = await fetch(API_URL, {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+              fullName: fullName,
+              phone: phone,
+              acceptedAt: acceptedAt
+            })
+          });
 
-        form.reset();
+          if (!res.ok) {
+            var text = await res.text();
+            console.error("Ошибка ответа сервера:", res.status, text);
+            status.textContent = "Ошибка сервера при фиксации договора. Попробуйте позже.";
+            status.classList.add("error");
+            return;
+          }
+
+          var json = {};
+          try {
+            json = await res.json();
+          } catch (_) {}
+
+          if (json.ok === false) {
+            status.textContent = "Сервис временно недоступен. Попробуйте позже.";
+            status.classList.add("error");
+            return;
+          }
+
+          status.textContent = "Договор принят. Данные успешно зафиксированы и отправлены Исполнителю.";
+          status.classList.add("success");
+
+          form.reset();
+        } catch (err) {
+          console.error("Ошибка запроса:", err);
+          status.textContent = "Не удалось отправить данные. Проверьте соединение или повторите позже.";
+          status.classList.add("error");
+        }
       });
     })();
   </script>
