--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
       border: 1px solid #e5e7eb;
     }
 
+    .logo-wrap {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 16px;
+    }
+
+    .logo-wrap img {
+      width: 80px;
+      height: 80px;
+      border-radius: 24px;
+      display: block;
+    }
+
     header h1 {
       margin: 0;
       font-size: 24px;
@@ -36,12 +49,14 @@
       letter-spacing: 0.03em;
       text-transform: uppercase;
       color: #0f172a;
+      text-align: center;
     }
 
     header p {
       margin: 4px 0 0;
       font-size: 13px;
       color: #6b7280;
+      text-align: center;
     }
 
     .contract-block {
@@ -89,6 +104,8 @@
       .card { padding: 24px 18px 20px; }
       .signature { grid-template-columns: 1fr; }
       .contract-block { max-height: 300px; }
+      header h1, header p { text-align: left; }
+      .logo-wrap { justify-content: flex-start; }
     }
 
     .signature h3 {
@@ -227,6 +244,11 @@
 <body>
   <div class="page">
     <div class="card">
+      <div class="logo-wrap">
+        <!-- Положи файл логотипа рядом с index.html под именем logo.png -->
+        <img src="logo.png" alt="Логотип HOME">
+      </div>
+
       <header>
         <h1>ДОГОВОР ПУБЛИЧНОЙ ОФЕРТЫ</h1>
         <p>на оказание информационно-риелторских услуг по аренде недвижимости «HOME»</p>
@@ -258,7 +280,7 @@
 
         <p class="contract-section-title">2. Условия оплаты</p>
         <p>
-          2.1. Оплата производится в сомах КР на указанные реквизиты Исполнителя в момент акцепта настоящего Договора.
+          2.1. Оплата производится в сомах КР на указанные реквизиты Исполнителя в момент принятия настоящего Договора Заказчиком.
         </p>
         <p>
           2.2. Стоимость услуг составляет 1000 (одна тысяча) сом, единовременно, за предоставление бессрочного доступа
@@ -335,7 +357,7 @@
         <div>
           <h3>Подписание онлайн</h3>
           <p>
-            Для акцепта оферты заполните данные и подтвердите согласие с условиями Договора.
+            Для принятия условий Договора заполните данные и подтвердите согласие.
           </p>
 
           <form id="agreement-form" novalidate>
@@ -369,7 +391,7 @@
               <button type="submit" class="btn-primary">
                 Подписать договор
               </button>
-              <span class="hint">Нажимая кнопку, вы подтверждаете акцепт условий Договора.</span>
+              <span class="hint">Нажимая кнопку, вы подтверждаете принятие условий Договора.</span>
             </div>
 
             <div id="status" class="status" aria-live="polite"></div>
@@ -378,7 +400,7 @@
 
         <div>
           <h3>Отметка о подписании</h3>
-          <p>После отправки формы здесь отобразится служебная информация о факте принятия оферты.</p>
+          <p>После отправки формы здесь отобразится служебная информация о факте принятия условий Договора.</p>
 
           <dl id="signature-summary" class="signature-summary" hidden>
             <dt>ФИО заказчика:</dt>
@@ -387,7 +409,7 @@
             <dt>Телефон:</dt>
             <dd id="summary-phone"></dd>
 
-            <dt>Дата и время акцепта:</dt>
+            <dt>Дата и время принятия:</dt>
             <dd id="summary-datetime"></dd>
 
             <dt>Статус:</dt>
