--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       margin: 0;
       padding: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f3f4f6;
-      color: #111827;
+      background: #0f172a;
+      color: #e5e7eb;
     }
 
     .page {
@@ -22,11 +22,11 @@
     }
 
     .card {
-      background: #ffffff;
+      background: #020617;
       border-radius: 16px;
       padding: 32px 32px 28px;
-      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.12);
-      border: 1px solid #e5e7eb;
+      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.9);
+      border: 1px solid #1f2937;
     }
 
     .logo-wrap {
@@ -36,8 +36,8 @@
     }
 
     .logo-wrap img {
-      width: 80px;
-      height: 80px;
+      width: 72px;
+      height: 72px;
       border-radius: 24px;
       display: block;
     }
@@ -48,27 +48,27 @@
       font-weight: 600;
       letter-spacing: 0.03em;
       text-transform: uppercase;
-      color: #0f172a;
+      color: #f9fafb;
       text-align: center;
     }
 
     header p {
       margin: 4px 0 0;
       font-size: 13px;
-      color: #6b7280;
+      color: #9ca3af;
       text-align: center;
     }
 
     .contract-block {
       margin-top: 24px;
       border-radius: 12px;
-      border: 1px solid #e5e7eb;
+      border: 1px solid #1f2937;
       padding: 20px 20px 16px;
       max-height: 380px;
       overflow-y: auto;
       font-size: 14px;
       line-height: 1.6;
-      background: #f9fafb;
+      background: #020617;
     }
 
     .contract-block h2 {
@@ -77,24 +77,25 @@
       font-weight: 600;
       text-transform: uppercase;
       letter-spacing: 0.05em;
-      color: #111827;
+      color: #e5e7eb;
     }
 
     .contract-section-title {
       margin-top: 12px;
       margin-bottom: 4px;
       font-weight: 600;
-      color: #111827;
+      color: #e5e7eb;
     }
 
     .contract-block p {
       margin: 4px 0;
+      color: #d1d5db;
     }
 
     .signature {
       margin-top: 24px;
       padding-top: 20px;
-      border-top: 1px solid #e5e7eb;
+      border-top: 1px solid #1f2937;
       display: grid;
       grid-template-columns: minmax(0, 1.4fr) minmax(0, 1fr);
       gap: 24px;
@@ -112,13 +113,13 @@
       margin: 0 0 8px;
       font-size: 15px;
       font-weight: 600;
-      color: #0f172a;
+      color: #f9fafb;
     }
 
     .signature p {
       margin: 0 0 14px;
       font-size: 13px;
-      color: #6b7280;
+      color: #9ca3af;
     }
 
     .field { margin-bottom: 14px; }
@@ -128,7 +129,7 @@
       margin-bottom: 4px;
       font-size: 13px;
       font-weight: 500;
-      color: #374151;
+      color: #d1d5db;
     }
 
     .field input[type="text"],
@@ -136,25 +137,31 @@
       width: 100%;
       padding: 10px 11px;
       border-radius: 10px;
-      border: 1px solid #d1d5db;
+      border: 1px solid #374151;
       font-size: 14px;
       outline: none;
       transition: border-color 0.15s ease, box-shadow 0.15s ease, background-color 0.15s ease;
-      background: #f9fafb;
+      background: #020617;
+      color: #e5e7eb;
+    }
+
+    .field input[type="text"]::placeholder,
+    .field input[type="tel"]::placeholder {
+      color: #6b7280;
     }
 
     .field input[type="text"]:focus,
     .field input[type="tel"]:focus {
       border-color: #2563eb;
       box-shadow: 0 0 0 1px rgba(37, 99, 235, 0.25);
-      background: #ffffff;
+      background: #020617;
     }
 
     .field small {
       display: block;
       margin-top: 3px;
       font-size: 11px;
-      color: #9ca3af;
+      color: #6b7280;
     }
 
     .checkbox-row {
@@ -164,11 +171,14 @@
       margin: 10px 0 4px;
     }
 
-    .checkbox-row input[type="checkbox"] { margin-top: 2px; }
+    .checkbox-row input[type="checkbox"] {
+      margin-top: 2px;
+      accent-color: #2563eb;
+    }
 
     .checkbox-row label {
       font-size: 12px;
-      color: #4b5563;
+      color: #9ca3af;
     }
 
     .actions {
@@ -210,7 +220,7 @@
 
     .hint {
       font-size: 11px;
-      color: #9ca3af;
+      color: #6b7280;
     }
 
     .status {
@@ -219,16 +229,16 @@
       min-height: 16px;
     }
 
-    .status.error { color: #b91c1c; }
-    .status.success { color: #15803d; }
+    .status.error { color: #f97373; }
+    .status.success { color: #4ade80; }
 
     .signature-summary {
       font-size: 13px;
-      color: #374151;
-      background: #f9fafb;
+      color: #e5e7eb;
+      background: #020617;
       border-radius: 12px;
       padding: 12px 14px;
-      border: 1px dashed #e5e7eb;
+      border: 1px dashed #374151;
     }
 
     .signature-summary dt {
@@ -257,98 +267,129 @@
         <h2>Текст договора</h2>
 
         <p>
-          Настоящий Договор публичной оферты на оказание информационно-риелторских услуг по аренде недвижимости (далее – «Договор»)
-          является официальным публичным предложением Исполнителя, действующего на основании свидетельства о регистрации
-          (далее – «Исполнитель»), на заключение сделки для оказания информационно-риелторских услуг по аренде недвижимости.
+          Настоящий документ представляет собой договор публичной оферты на оказание информационно-риелторских услуг
+          по подбору вариантов аренды жилой недвижимости (далее – «Договор»). Исполнитель, действующий на основании
+          свидетельства о регистрации (далее – «Исполнитель»), обращается с данным предложением к любому лицу,
+          готовому принять условия Договора (далее – «Заказчик»).
         </p>
         <p>
-          Договор считается заключённым и вступает в силу с момента оплаты услуг Исполнителя Заказчиком.
-          Оплата подтверждает полное и безоговорочное принятие всех условий настоящего Договора.
+          Оплата услуг Исполнителя считается полным и безусловным принятием всех условий Договора.
+          С момента поступления оплаты на реквизиты Исполнителя между Сторонами считается заключённым договор
+          на условиях, изложенных ниже.
         </p>
 
         <p class="contract-section-title">1. Предмет договора</p>
         <p>
-          1.1. Исполнитель обязуется осуществлять поиск квартир по городу Бишкек через свои источники и включить Заказчика
-          в специальную группу в Telegram-приложении с базой данных жилой недвижимости (далее – «Объекты»)
-          после получения оплаты, а также направлять варианты Объектов в указанную группу.
+          1.1. Исполнитель оказывает Заказчику информационно-риелторские услуги по поиску квартир для аренды
+          в пределах города Бишкек с использованием собственных каналов и источников информации.
         </p>
         <p>
-          1.2. Получая информацию от Исполнителя, Заказчик самостоятельно осматривает Объект и договаривается
-          с арендодателем (собственником или его представителем) напрямую.
+          1.2. В рамках оказания услуг Исполнитель предоставляет Заказчику доступ к специализированной группе
+          в мессенджере Telegram, содержащей объявления и сведения об объектах жилой недвижимости
+          (далее – «Объекты»), а также публикует в этой группе подходящие варианты Объектов.
+        </p>
+        <p>
+          1.3. После получения информации в группе Заказчик самостоятельно инициирует контакт с арендодателем
+          (собственником Объекта либо его представителем), договаривается о просмотре, обсуждает условия аренды
+          и заключает договор аренды напрямую, без участия Исполнителя.
         </p>
 
         <p class="contract-section-title">2. Условия оплаты</p>
         <p>
-          2.1. Оплата производится в сомах КР на указанные реквизиты Исполнителя в момент принятия настоящего Договора Заказчиком.
+          2.1. Оплата производится в национальной валюте Кыргызской Республики – сомах – путём перечисления
+          денежных средств на реквизиты Исполнителя, указанные на сайте или предоставленные иным способом.
+          Момент оплаты считается моментом принятия Заказчиком условий настоящего Договора.
         </p>
         <p>
-          2.2. Стоимость услуг составляет 1000 (одна тысяча) сом, единовременно, за предоставление бессрочного доступа
-          к группе в Telegram-приложении «HOME» без ограничения по сроку действия подписки
-          (до прекращения работы сервиса/группы или удаления Заказчика за нарушение условий Договора).
+          2.2. Стоимость услуг Исполнителя составляет 1000 (одна тысяча) сом и оплачивается единовременно
+          за предоставление Заказчику бессрочного доступа к группе в Telegram-приложении «HOME»,
+          без установления срока окончания подписки. Доступ может быть прекращён только в случае закрытия сервиса
+          либо удаления Заказчика за нарушение условий Договора.
         </p>
         <p>
-          2.3. Услуга считается оказанной с момента предоставления доступа к группе в Telegram-приложении.
+          2.3. Услуги Исполнителя считаются оказанными надлежащим образом с момента предоставления Заказчику
+          технического доступа к группе «HOME» в Telegram.
         </p>
         <p>
-          2.4. Оплаченная сумма не подлежит возврату, в том числе в случае, если Заказчик не воспользовался предложениями,
-          не заселился или прекратил пользоваться группой по собственной инициативе.
+          2.4. Оплата, произведённая Заказчиком, возврату не подлежит при любых обстоятельствах,
+          включая случаи, когда Заказчик не воспользовался размещёнными объявлениями, не заключил договор аренды
+          либо прекратил использование группы по собственной инициативе.
         </p>
 
         <p class="contract-section-title">3. Права и обязанности сторон</p>
         <p>
-          3.1. Исполнитель обязуется проводить поиск Объектов по городу Бишкек через свои источники и направлять
-          найденные варианты в группу в Telegram-приложении.
+          3.1. Исполнитель обязуется регулярно осуществлять поиск объявлений об аренде квартир по городу Бишкек
+          через свои источники и размещать найденные варианты Объектов в группе «HOME».
         </p>
         <p>
-          3.2. Исполнитель вправе консультировать Заказчика по общим вопросам, связанным с Объектами, до заселения
-          (в пределах своей компетенции и без участия в переговорах и заключении договора аренды).
+          3.2. Исполнитель вправе по запросу Заказчика давать общие разъяснения и комментарии по Объектам,
+          размещённым в группе, в пределах своей компетенции, не вступая при этом в переговоры
+          и не представляя интересы Заказчика перед арендодателями.
         </p>
         <p>
-          3.3. Заказчик обязуется оплатить услуги Исполнителя в соответствии с условиями настоящего Договора
-          и предоставить достоверные контактные данные.
+          3.3. Заказчик обязуется предоставить при заполнении формы достоверные персональные данные,
+          самостоятельно обеспечить возможность связи по указанному контактному номеру и своевременно
+          отслеживать новые объявления в группе.
         </p>
         <p>
-          3.4. Заказчик обязуется не передавать третьим лицам доступ к группе и/или полученную от Исполнителя информацию
-          об Объектах, не копировать и не распространять её каким-либо способом без согласия Исполнителя.
+          3.4. Заказчику запрещается передавать третьим лицам логин, ссылки, скриншоты и иную информацию,
+          позволяющую этим лицам получать доступ к группе «HOME» либо к объявлениям из группы без согласия Исполнителя.
         </p>
         <p>
-          3.5. В случае распространения третьим лицам информации об Объектах, полученной через группу Telegram-приложения,
-          на Заказчика налагается штраф за неисполнение условий настоящего Договора в размере
-          10 000 (десять тысяч) сом.
+          3.5. Заказчик не вправе копировать базу объявлений или систематически распространять сведения
+          об Объектах любым способом (пересылка сообщений, публикация в других каналах, перепродажа доступов
+          и т.п.) без предварительного письменного согласия Исполнителя.
+        </p>
+        <p>
+          3.6. В случае выявления факта передачи третьим лицам информации об Объектах, полученной Заказчиком
+          из группы «HOME», на Заказчика накладывается договорный штраф в размере
+          10 000 (десять тысяч) сом за нарушение условий конфиденциальности и ограничений распространения.
         </p>
 
         <p class="contract-section-title">4. Ограничение ответственности</p>
         <p>
-          4.1. Информация о недвижимости и объявления об Объектах предоставляются третьими лицами
-          (собственниками, их представителями и иными лицами) и могут быть получены как из закрытых, так и из открытых источников
-          (например, Лалафо и других аналогичных площадок).
+          4.1. Источником информации об Объектах являются третьи лица – собственники недвижимости,
+          их представители и иные лица, размещающие объявления, а также открытые и закрытые интернет-площадки
+          (в том числе сервисы наподобие «Лалафо» и аналогичные ресурсы).
         </p>
         <p>
-          4.2. Исполнитель не несёт ответственности за содержание, достоверность, актуальность, полноту, законность
-          и иные характеристики объявлений арендодателей, а также за соответствие Объекта фактическим условиям.
+          4.2. Исполнитель передаёт Заказчику сведения об Объектах «как есть» и не несёт ответственности
+          за корректность, полноту, актуальность, юридическую чистоту и соответствие объявлений фактическому состоянию Объекта.
         </p>
         <p>
-          4.3. Все детали и условия аренды (стоимость, сроки, залог, порядок оплаты, наличие документов, состояние Объекта и т.п.)
-          Заказчик обязан самостоятельно уточнять напрямую у арендодателя до заключения договора аренды.
+          4.3. Все условия будущей аренды (размер и порядок внесения оплаты, размер залога, сроки проживания,
+          наличие и состояние имущества, документы на Объект и т.д.) Заказчик обязан проверить самостоятельно,
+          непосредственно общаясь с арендодателем до заключения договора аренды.
         </p>
         <p>
-          4.4. Исполнитель не гарантирует заключение сделки аренды, её успешность, а также не является стороной сделки
-          между Заказчиком и арендодателем.
+          4.4. Исполнитель не является стороной договора аренды между Заказчиком и арендодателем,
+          не гарантирует заключение сделки и не отвечает за её исход, включая отказ арендодателя заключать договор,
+          изменение им условий, расторжение договора аренды и любые последствия таких действий.
         </p>
         <p>
-          4.5. Исполнитель не несёт ответственности за действия или бездействие арендодателей, изменение условий аренды,
-          отказ в аренде, недобросовестное поведение третьих лиц и иные последствия взаимоотношений между Заказчиком
-          и третьими лицами.
+          4.5. Исполнитель не несёт ответственности за действия и бездействие арендодателей и иных третьих лиц,
+          их добросовестность, соблюдение ими договорённостей, а также за возможные убытки Заказчика,
+          возникшие в результате отношений с этими лицами.
         </p>
 
-        <p class="contract-section-title">5. Прочие положения</p>
+        <p class="contract-section-title">5. Заключительные положения</p>
         <p>
-          5.1. Договор вступает в силу с момента оплаты услуг Исполнителя Заказчиком и действует на весь период предоставления
-          Заказчику доступа к группе в Telegram-приложении «HOME».
+          5.1. Договор начинает действовать с момента поступления оплаты за услуги на счёт Исполнителя
+          и сохраняет силу на весь период, пока Заказчик имеет доступ к группе «HOME» в Telegram.
         </p>
         <p>
-          5.2. Любые дополнительные договорённости между Заказчиком и арендодателем заключаются без участия Исполнителя
-          и не создают для Исполнителя каких-либо обязанностей или ответственности.
+          5.2. Изменения в требованиях Заказчика к искомому Объекту (район, бюджет, количество комнат и т.п.)
+          могут передаваться Исполнителю в устной форме либо любым способом связи, используемым Сторонами,
+          и не требуют заключения отдельного письменного соглашения.
+        </p>
+        <p>
+          5.3. Любые дополнительные договорённости, достигнутые между Заказчиком и арендодателем,
+          оформляются ими самостоятельно и не создают для Исполнителя каких-либо прав и обязанностей.
+        </p>
+        <p>
+          5.4. Применимым правом по настоящему Договору является законодательство Кыргызской Республики.
+          Все возможные разногласия и требования, возникающие в связи с исполнением Договора, подлежат рассмотрению
+          в соответствии с этим законодательством.
         </p>
       </section>
 
@@ -421,7 +462,6 @@
 
   <script>
     (function () {
-      // относительный путь — работает на любом домене этого проекта
       const API_URL = "/sign-contract";
 
       var form = document.getElementById("agreement-form");
